// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputGroup slots should apply special classes when having multiple slots 1`] = `
<div
  class="input-group h-8 box-border elements-0"
>
  
  &lt;button&gt;click!&lt;/button&gt;
  
  
  &lt;input type="text" /&gt;
  &lt;input type="text" /&gt;
  
</div>
`;

exports[`InputGroup slots should have a slot for buttons 1`] = `
<div
  class="input-group h-8 box-border elements-0"
>
  
  &lt;button&gt;click!&lt;/button&gt;
  
  
  
</div>
`;

exports[`InputGroup slots should have a slot for inputs 1`] = `
<div
  class="input-group h-8 box-border elements-0"
>
  
  
  
  &lt;input type="text" /&gt;
  
</div>
`;
